# r-gh-create-release

./: .rustfmt.toml  Cargo.toml  README.md  make-publish.bat  make.bat
.github/workflows/: 00-create-release.yml  dotnet-desktop.yml
src/: main.rs  util.rs
