[package]
name = "r-gh-create-release"
description = "gh release wrapper CLI"
version = "1.0.46"
license = "MIT"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2021"
repository = "https://github.com/mass10/r-gh-create-release/"
documentation = "https://docs.rs/crate/r-gh-create-release/"
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "*"
rand = "*"
chrono = "*"
regex = "*"
toml = "*"
serde = "*"
serde_derive = "*"
