[package]
name = "r-gh-create-release"
description = "gh release wrapper CLI"
version = "1.0.51"
license = "MIT"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2021"
repository = "https://github.com/mass10/r-gh-create-release/"
documentation = "https://docs.rs/crate/r-gh-create-release/"
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "^0.2.21"
chrono = "^0.4.24"
regex = "^1.8.2"
toml = "^0.7.4"
serde = "^1.0.164"
serde_derive = "^1.0.164"
